# fungi_detector_app

./: .env.example  .gitignore  README.md  firebase.json  pubspec.yaml  releases.json
android/app/: build.gradle.kts  google-services.json  google-services.json.example
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
assets/data/: au_localities.csv  species.json  species_tas.json
assets/models/: metadata.yaml
ios/: Podfile
ios/Runner/: Info.plist
lib/: firebase_options.dart  main.dart
lib/auth/: email_auth_service.dart  google_auth_service.dart
lib/config/: app_secrets.dart
lib/detection/: detection.dart  iou.dart  stability_engine.dart  track.dart
lib/models/: field_note.dart  navigation_args.dart  observation.dart  species.dart
lib/native/: native_yolo_engine.dart
lib/repositories/: field_notes_repository.dart  observation_repository.dart  species_repository.dart
lib/screens/: about_screen.dart  detection_page.dart  detection_result_screen.dart  disclaimer_screen.dart  field_note_editor_screen.dart  field_notes_screen.dart  home_screen.dart  main_shell_screen.dart  map_screen.dart  observations_screen.dart  save_observation_screen.dart  settings_screen.dart  signin_screen.dart  signup_screen.dart  species_detail_screen.dart  species_library_screen.dart  startup_screen.dart  welcome_screen.dart
lib/services/: attachment_storage_service.dart  location_capture_service.dart  location_label_service.dart  map_screen_controller.dart  map_tile_cache_service.dart  settings_service.dart
lib/utils/: formatting.dart  lichen_headline_gate.dart
lib/widgets/: forest_background.dart  simple_nav_screen.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
native/yolo_engine/: CMakeLists.txt
native/yolo_engine/include/: yolo_engine_api.h
native/yolo_engine/ios/: yolo_engine.podspec
native/yolo_engine/src/: engine_api.cc  image_utils.cc  image_utils.h  postprocess.cc  postprocess.h  yolo_engine.cc  yolo_engine.h
test/: lichen_headline_gate_test.dart  stability_engine_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
